# ai-portfolio

./: README.md  todaymission.ipynb
.devcontainer/: devcontainer.json
deep-learning/computer-vision/: rock_scissor_paper.ipynb
deep-learning/nlp/korean-chatbot-transformer/: Korean_Chatbot_Transformer.ipynb  README.md  pyproject.toml
deep-learning/prediction/: Boston,Reuters,CIFAR10_tensorflow.ipynb
etc/: customer.ipynb
machine-learning/eda/car-eda&pca/: usedcar_price_pca.ipynb
machine-learning/eda/trip-eda/: trip.csv  trip.ipynb
machine-learning/nlp/: reuters_TFIDF.ipynb
machine-learning/preidiction/retail-prediction/: retail-price-prediction.ipynb
mainquest/08-01-2025/: fraud.ipynb
project/09-02-2025/: bike.ipynb
project/09-11-2025/: ㄴㄹㅇㅎ
rag-langchain/chatbot/: README.md  aiffel_chatbot.py  pyproject.toml  requirements.txt
recommender-system/MovieLens-1M/: README.md  pyproject.toml
recommender-system/MovieLens-1M(Autoint)/autoint/: README.md  autoint.py  show_st.py
recommender-system/MovieLens-1M(Autoint)/autoint/data/: label_encoders.pkl
recommender-system/MovieLens-1M(Autoint)/autoint/model/: autoInt_model_weights.h5
recommender-system/MovieLens-1M(Autoint)/autoint/notebooks/: autoint+.ipynb  autoint.ipynb  prepro.ipynb
recommender-system/MovieLens-1M(Session)/: README.md  session_rec.ipynb
recommender-system/movielens-autoint/autoint/: README.md  autoint.py  show_st.py
recommender-system/movielens-autoint/autoint/notebooks/: eda.ipynb
recommender-system/movielens-session/: pyproject.toml
time-series/airpassengers-prediction/: airpassengers-arima.ipynb  airpassengers-preprocessing.ipynb
time-series/usa-electricty-classification(DTW)/: README.md  usa_meta_stacking.ipynb
time-series/usa-electricty-dtw-classification/: usa_meta.ipynb
workspace/BIGCON/: README.md  bigcon.ipynb  pyproject.toml
workspace/deep-learning/nlp/korean-chatbot-transformer/: .gitignore  README.md  pyproject.toml
workspace/machine-learning/classification/credit-card-fraud-detection/: fraud.ipynb
workspace/machine-learning/eda/car-eda&pca/: brand.csv  cars.csv
workspace/machine-learning/eda/trip-eda/: trip.csv
workspace/machine-learning/preidiction/ameshouse-prediction/: house-stacking.ipynb
workspace/machine-learning/preidiction/crypto-prediction/ethereum-prediction/: ethereum-prediction.ipynb
workspace/test/: test.ipynb
