[project]
name = "recsys_gpu"
version = "0.1.0"
description = ""
authors = [
    {name = "snhzyn",email = "sonhojin1202@gmail.com"}
]
readme = "README.md"
requires-python = "3.9.7"
dependencies = [
  "tensorflow-gpu==2.6.0",
  "numpy==1.19.5",
  "pandas==1.3.3",
  "scipy==1.7.1",
  "scikit-learn==0.24.2",
  "matplotlib==3.4.3",
  "seaborn==0.11.2",
  "h5py==3.1.0",
  "protobuf==3.19.1",
  "jupyter==1.0.0",
  "ipykernel==6.6.0",
  "notebook==6.1.6",
  "tensorboard==2.7.0",
  "tensorflow-estimator==2.7.0",
  "keras (==2.6.0)",
  "tqdm (==4.62.3)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
