[project]
name = "bigcon"
version = "0.1.0"
description = "2025 Big Contest"
authors = [
    {name = "snhzyn",email = "sonhojin1202@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.23.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "imbalanced-learn>=0.12.0",
    "optuna>=3.3.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "chardet>=5.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
