[project]
name = "korean_chatbot"
version = "0.1.0"
description = "Modulabs NLP Project"
authors = [
    {name = "snhzyn",email = "sonhojin1202@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10, <3.12"
dependencies = [
  "tensorflow==2.10.0",
  "tensorflow-io-gcs-filesystem==0.31.0",
  "protobuf==3.19.6",
  "numpy==1.23.5",
  "tensorflow-datasets==4.6.0",
  "matplotlib==3.8.4",
  "ipykernel",
  "pandas (>=2.3.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
